--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,14 @@
 html, body {
     min-height: 100%;
   }
+  @layer base{
+    label {
+      @apply text-sm text-[#333333] font-helvetica;
+    }
+    span{
+      @apply font-helvetica text-lg
+    }
+  }
 
 @layer components {
    .button-primary-sm {
